Fixing dark mode for laser tag page

--- a/mysite/static/styles/styles.css
+++ b/mysite/static/styles/styles.css
@@ -302,9 +302,9 @@ h13{
     margin-top: 40px;
     border-style: solid;
     border-color: grey;
-    color: white;
+    color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: white;
+    background-color: grey;
     font-size: 20;
 }
 
